# unitree-app-templates

./: .gitignore  LICENSE  readme.md  readme_zh.md
g1_mimic_demo/: .dockerignore  Dockerfile.arm64-builder  README.md  README_zh.md  docker_build_arm64.sh  metadata.yaml
g1_mimic_demo/app/g1/: cmd_realtime.py  cmd_server.py  config.py  run_g1_ctrl.sh
g1_mimic_demo/app/g1/app_out/config/: config.yaml
g1_mimic_demo/deploy_template/: CMakeLists.txt  install.sh  main.cpp  run_g1_ctrl.sh
g1_mimic_demo/deploy_template/config/: config.yaml
g1_mimic_demo/deploy_template/config/policy/mimic/gangnam_style/exported/: kaichangquan.onnx
g1_mimic_demo/deploy_template/config/policy/mimic/unistore/exported/: gangnam_style.mnn
g1_mimic_demo/deploy_template/config/policy/velocity/v0/exported/: policy.mnn
g1_mimic_demo/deploy_template/include/: State_Mimic.h  param.h
g1_mimic_demo/deploy_template/include/FSM/: CtrlFSM.h  FSMState.h  State_Exit.h  State_Passive.h
g1_mimic_demo/deploy_template/include/isaaclab/algorithms/: algorithms.h
g1_mimic_demo/deploy_template/include/isaaclab/envs/: manager_based_rl_env.h
g1_mimic_demo/deploy_template/include/isaaclab/envs/mdp/: terminations.h
g1_mimic_demo/deploy_template/include/isaaclab/manager/: action_manager.h
g1_mimic_demo/deploy_template/include/unitree/dds_wrapper/robots/g1/: g1_pub.h
g1_mimic_demo/deploy_template/src/: State_Mimic.cpp  State_RLBase.cpp
g1_mimic_demo/ui/: config.json
g1_walk_demo/: .gitignore  metadata.yaml  readme.md
g1_walk_demo/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
g1_walk_demo/control/: CMakeLists.txt
g1_walk_demo/control/src/: cmd.cpp  functions.hpp
g1_walk_demo/server/: cmd_realtime.py  cmd_server.py  config.py
g1_walk_demo/ui/: config.json  index.html
go2_action_demo/: README.md  metadata.yaml
go2_action_demo/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
go2_action_demo/app/: main.py
go2_action_demo/ui/: config.json  index.html
go2_camera_demo/.devcontainer/: devcontainer.json  docker-compose.yml
go2_camera_demo/app/: main.py
go2_camera_demo/ui/: config.json  index.html
mobile_viewer/: index.html  readme.md  server.py
unitree_cli/: cli.py  metadata.yaml  readme.md
